07.ingress/02-hello-app-02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello02
  labels:
    role: hello02
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello02
      tier: web
  template:
    metadata:
      labels:
        role: hello02
        tier: web
    spec:
      containers:
      - name: hello-app-02
        image: gcr.io/google-samples/hello-app:2.0
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8080
