07.ingress/03-hello-app-01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-service
spec:
  selector:
    role: hello01
  ports:
    - port: 81
      targetPort: 8080
