07.ingress/04-hello-app-02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-service
spec:
  selector:
    role: hello02
  ports:
    - port: 82
      targetPort: 8080
